hphp/test/zend/good/ext/xmlreader/tests/bug42139.php.skipif
<?php if (!extension_loaded("xmlreader")) print "skip";
if (LIBXML_VERSION < 20628) die("skip: libxml2 2.6.28+ required");
?>